# aliencommons

./: .dockerignore  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  Makefile  README.md  README.zh.md  SECURITY.md  docker-compose.dev.yml  docker-compose.full-dev.yml  docker-compose.fulldev.yml  docker-compose.pro.yml  docker-compose.staging.yml  docker-compose.stg.yml  docker-compose.traefik.yml  knip.jsonc  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  skills-lock.json  turbo.json  vite.config.ts
apps/backend/: .dockerignore  .env.devfull  .env.test  AGENTS.md  Dockerfile  Makefile  README.md  dependencies.txt  env_bootstrap.py  manage.py  openapi.yaml  pyproject.toml  requirements.txt  ruff.toml
apps/backend/articles/: admin.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
apps/backend/backend/: asgi.py  urls.py  wsgi.py
apps/backend/bookmarks/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/backend/comments/: admin.py  apps.py  mentions.py  models.py  permissions.py  querysets.py  serializers.py  services.py  urls.py  views.py
apps/backend/core/: admin.py  fields.py  middleware.py  model_mixins.py  models.py  pagination.py  signals.py  validators.py
apps/backend/env/: .env.dev  .env.dev_lite
apps/backend/logs/: middleware.py
apps/backend/notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/backend/pages/: tasks.py  tests.py  urls.py  views.py
apps/backend/posts/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
docs/: AGENTS.md  (+3 more)
(+455 files in other folders)
