[project]
name = "aliencommons-backend"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
  "channels[daphne]==4.3.2",
  "django==6.0.7",
  "django-cors-headers==4.9.0",
  "django-filter==25.2",
  "django-redis==7.0.0",
  "django-storages[s3]==1.14.6",
  "django-tasks-rq==0.12.0",
  "djangorestframework==3.17.1",
  "drf-std-response==0.1.0",
  "environs==15.0.1",
  "pillow==12.3.0",
  "psycopg[binary]==3.3.4",
  "requests==2.34.2",
  "user-agents==2.2.0",
]

[dependency-groups]
dev = ["ruff==0.15.20"]

[tool.uv]
add-bounds = "exact"
